tests/ui/traits/next-solver/opaques/dont-type_of-tait-in-defining-scope.not_send.stderr
error[E0282]: type annotations needed
  --> $DIR/dont-type_of-tait-in-defining-scope.rs:16:5
   |
LL |     needs_send::<Foo>();
   |     ^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `needs_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
